--- a/API/client/src/styles/_userPortal.scss
+++ b/API/client/src/styles/_userPortal.scss
@@ -35,3 +35,34 @@
 .right-col {
   margin-top: 15%;
 }
+
+.heading-text {
+  margin-left: 15px;
+  color: white;
+}
+
+.titles-text {
+  color: white;
+  margin-left: 0 !important;
+}
+
+#holdings {
+  margin-left: 50%;
+}
+
+#holding-text {
+  margin-left: 33%;
+}
+
+.company-text {
+  position: relative;
+  right: 10px;
+  color: #1aac3c;
+  padding: 10px;
+  margin-left: 15px;
+}
+
+.shares-current {
+  color: rgb(156, 156, 156);
+  margin-left: 15px;
+}
