--- a/API/client/src/styles/styles.scss
+++ b/API/client/src/styles/styles.scss
@@ -4,38 +4,42 @@
 @import "./userPortal";
 
 #root {
-    height: 100%;
-    margin-bottom: 15px;
-  }
-  html,
-  body {
-    height: 100%;
-    margin: 0px;
-    font-size: 16px;
-    font-family: "Roboto", sans-serif !important;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.72), rgba(0, 0, 0, 0.85)),
-      url("./images/sigmund-R401qwThw7w-unsplash.jpg") !important;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow: auto;
-  }
+  height: 100%;
+  margin-bottom: 15px;
+}
+html,
+body {
+  height: 100%;
+  margin: 0px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif !important;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.72), rgba(0, 0, 0, 0.85)),
+    url("./images/sigmund-R401qwThw7w-unsplash.jpg") !important;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: auto;
+}
 
-  button {
-    border-radius: 0 !important;
-  }
+button {
+  border-radius: 0 !important;
+}
 
-  .landing-row {
-    margin: 0;
-  }
+.landing-row {
+  margin: 0;
+}
 
-  nav.navbar {
-    background-color: rgb(76, 187, 48) !important;
-    font-family: "Roboto", sans-serif;
-  }
+nav.navbar {
+  background-color: rgb(76, 187, 48) !important;
+  font-family: "Roboto", sans-serif;
+}
 
-  .container {
-    height: 100%;
-    width: 100%;
-    margin: 0 0;
-  }
+.container {
+  height: 100%;
+  width: 100%;
+  margin: 0 0;
+}
+
+.alert {
+  margin-top: 1rem;
+}
