--- a/API/client/src/styles/_landingPage.scss
+++ b/API/client/src/styles/_landingPage.scss
@@ -5,28 +5,33 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
 
-.welcome-text {
-  opacity: 0.9;
-  color: white;
-  font-size: 3rem;
-}
+  .welcome-text {
+    opacity: 0.9;
+    color: white;
+    font-size: 3rem;
+  }
 
-.topia-color {
-  color: $highlightGreen;
-}
+  .second-description-text {
+    color: rgb(76, 187, 48);
+    font-size: 2rem;
+  }
 
-.description-text {
-  margin-right: 500px;
-  color: white;
-}
+  .topia-color {
+    color: $highlightGreen;
+  }
 
-.account-button-text {
-  color: $lpButtonTextColor;
-}
+  .description-text {
+    margin-right: 500px;
+    color: white;
+  }
 
-.landing-page-buttons {
-  width: 9.5rem;
-  margin-left: 20px !important;
+  .account-button-text {
+    color: $lpButtonTextColor;
+  }
+
+  .landing-page-buttons {
+    width: 9.5rem;
+    margin-left: 20px !important;
+  }
 }
