--- a/API/client/src/styles/styles.scss
+++ b/API/client/src/styles/styles.scss
@@ -14,7 +14,7 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif !important;
   background-image: linear-gradient(rgba(0, 0, 0, 0.72), rgba(0, 0, 0, 0.85)),
-    url("./images/sigmund-R401qwThw7w-unsplash.jpg") !important;
+    url("../images/sigmund-R401qwThw7w-unsplash.jpg") !important;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
